--- a/css/styles.css
+++ b/css/styles.css
@@ -1157,14 +1157,17 @@ input:checked+label>span {
 
 .mob-menu {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     top: 0;
+    z-index: 2;
     background-color: #fff;
-    padding: 24px 24px 40px 40px;
+    padding: 24px 40px 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: auto;
+    margin: auto;
 }
 
 
@@ -1207,6 +1210,7 @@ input:checked+label>span {
 .mob-address {
     font-style: normal;
     margin-bottom: 48px;
+    display: block;
 }
 
 
@@ -1235,8 +1239,8 @@ input:checked+label>span {
 
 .mob-soc-list {
     display: flex;
-    justify-content: start;
-    gap: calc((100% - 56px * 3) / 4);
+    justify-content: ;
+    gap: 54px;
 }
 
 .mob-address-link:hover,
