--- a/css/media.css
+++ b/css/media.css
@@ -252,6 +252,10 @@
 
     /* HOVER */
 
+    .section-hover {
+        display: flex;
+    }
+
     .hover-img {
         display: block;
     }
@@ -268,11 +272,15 @@
 
     .hover-list {
         display: flex;
-        align-items: center;
+        align-items: baseline;
         gap: 24px;
     }
 
     .hover {
+        margin-bottom: 0;
+    }
+
+    .hover-titel {
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
@@ -280,6 +288,7 @@
         text-transform: capitalize;
         color: var(--title-color);
         text-align: center;
+        margin-bottom: 72px;
     }
 
     /* TEAM */
@@ -359,7 +368,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 8px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -468,7 +476,7 @@
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: var(--footer-text-color);
-        max-width: 264px;
+        min-width: 264px;
     }
 
     /* SOCIAL-MEDIA */
@@ -514,7 +522,6 @@
     }
 
     .footer-form-container {
-        margin-bottom: 16px;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
@@ -999,7 +1006,6 @@
         padding: 32px 16px;
         border: 1px solid #e7e9fc;
         border-top: none;
-        margin-bottom: 8px;
     }
 
     .row-cover-wrap {
@@ -1059,6 +1065,7 @@
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: var(--title-color);
+        margin-bottom: 8px;
     }
 
     .row-text {
@@ -1118,6 +1125,7 @@
         box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
             0px 1px 1px rgba(46, 47, 66, 0.16),
             0px 1px 6px rgba(46, 47, 66, 0.08);
+    
     }
 
     .header-container {
@@ -1127,6 +1135,7 @@
         padding-bottom: 16px;
         padding-left: 0;
         padding-right: 0;
+        height: 72px;
     }
 
     .header-nav {
@@ -1219,11 +1228,18 @@
         display: flex;
         flex-wrap: wrap;
         margin-left: 121px;
+        gap: 12px;
     }
 
     .header-address {
         font-style: normal;
         margin-left: auto;
+    }
+
+    .header-address-item {
+        height: 14px;
+        justify-content: center;
+        display: flex;
     }
 
     .header-address-link {
@@ -1255,6 +1271,14 @@
         padding-top: 112px;
         padding-bottom: 112px;
     }
+
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+        .main-section-button {
+            background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+                    url(../images/people-office.jpg);
+        }
+    }
+
 
     .main-section-button {
         background-color: var(--title-color);
@@ -1352,6 +1376,7 @@
         letter-spacing: 0.02em;
         margin-bottom: 8px;
         color: var(--title-color);
+        text-align: start;
     }
 
     .intermedia-text {
@@ -1473,7 +1498,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 8px;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -1953,12 +1977,14 @@
 
     .header-portfolio {
         border-bottom: 1px solid #e7e9fc;
+        height: 72px;
     }
 
     .prt-header-container {
         display: flex;
         justify-content: space-between;
         padding: 16px 0;
+        height: 72px;
     }
 
     .logo {
@@ -2048,6 +2074,14 @@
         display: flex;
         flex-wrap: wrap;
         margin-left: 121px;
+        gap: 12px;
+    }
+
+    .address-item {
+        width: 119px;
+        height: 14px;
+        justify-content: center;
+        display: flex;
     }
 
     .address-text {
@@ -2204,6 +2238,7 @@
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: var(--title-color);
+        margin-bottom: 8px;
     }
 
     .row-text {
