--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ ol {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--logo-color);
-    margin-right: 76px;
+    margin-right: 249px;
     display: block;
 }
 
@@ -153,7 +153,7 @@ ol {
 
 .header-address {
     font-style: normal;
-    margin-left: auto;
+
 }
 
 .header-address-link {
@@ -180,6 +180,13 @@ ol {
     margin: 0 auto;
     padding-top: 112px;
     padding-bottom: 112px;
+}
+
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .main-section-button {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+    }
 }
 
 .main-section-button {
@@ -269,6 +276,7 @@ ol {
     letter-spacing: 0.02em;
     margin-bottom: 8px;
     color: var(--title-color);
+    text-align: center;
 }
 
 .intermedia-text {
@@ -305,6 +313,7 @@ ol {
     text-transform: capitalize;
     color: var(--title-color);
     text-align: center;
+    margin-bottom: 72px;
 }
 
 /* TEAM */
@@ -316,7 +325,7 @@ ol {
 .section-team {
     min-width: 294px;
     background-color: var(--footer-text-color);
-    padding: 120px 0 120px;
+    padding: 96px 0 96px;
 }
 
 .team-img {
@@ -368,7 +377,9 @@ ol {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
-    color: var(--iten-color)
+    color: var(--iten-color);
+    margin-bottom: 8px;
+    
 }
 
 .team-list-soc {
@@ -390,7 +401,6 @@ ol {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -806,7 +816,7 @@ ol {
     align-items: center;
     justify-content: center;
     fill: transparent;
-
+    margin-right: 8px;
 }
 
 
@@ -843,7 +853,10 @@ input:checked+label>span {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-
+.modal-button:hover,
+.modal-button:focus {
+    background-color: var(--about-color);
+}
 
 /* PORTFOLIO */
 
@@ -977,6 +990,12 @@ input:checked+label>span {
 .filters {
     padding-top: 48px;
     padding-bottom: 120px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.filters-container {
+    margin: 0 auto;
 }
 
 .filters-list {
@@ -1094,6 +1113,7 @@ input:checked+label>span {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--title-color);
+    margin-bottom: 8px;
 }
 
 .row-text {
@@ -1219,6 +1239,10 @@ input:checked+label>span {
     display: block;
 }
 
+.mob-address-list {
+    display: grid;
+    gap: 40px;
+}
 
 .mob-address-link {
     letter-spacing: 0.02em;
@@ -1232,9 +1256,7 @@ input:checked+label>span {
     font-size: 36px;
     line-height: 1.11;
     color: #4d5ae5;
-    margin-bottom: 40px;
     text-transform: capitalize;
-
 }
 
 .mail {
