--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ ol {
 }
 
 .container {
-    width: 426px;
+    min-width: 320px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -80,7 +80,6 @@ ol {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: var(--logo-color);
-    margin-right: 249px;
     display: block;
 }
 
@@ -328,6 +327,7 @@ ol {
     padding: 96px 0 96px;
 }
 
+
 .team-img {
     display: block;
 }
@@ -347,7 +347,7 @@ ol {
     display: flex;
     flex-wrap: wrap;
     gap: 72px;
-
+    justify-content: center;
 }
 
 .team {
@@ -950,11 +950,6 @@ input:checked+label>span {
     background-color: #404BBF;
 }
 
-.address {
-    font-style: normal;
-    display: flex;
-}
-
 .address-list {
     display: none;
 }
@@ -990,8 +985,6 @@ input:checked+label>span {
 .filters {
     padding-top: 48px;
     padding-bottom: 120px;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
 .filters-container {
@@ -1097,6 +1090,7 @@ input:checked+label>span {
     display: flex;
     flex-wrap: wrap;
     gap: 48px 0;
+    justify-content: center;
 }
 
 .row-item {
@@ -1177,18 +1171,18 @@ input:checked+label>span {
 
 .mob-menu {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     top: 0;
     z-index: 2;
     background-color: #fff;
-    padding: 24px 40px 40px;
+    padding: 24px 24px 40px 40px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     overflow: auto;
     margin: auto;
-    transform: translateX(100%);
+    transform: translateX(-100%);
 }
 
 .mob-menu.is-open {
