--- a/css/styles.css
+++ b/css/styles.css
@@ -648,7 +648,7 @@ ol {
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms linear;
-    width: 392px;
+    min-width: 320px;
     min-height: 584px;
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1046,7 +1046,6 @@ input:checked+label>span {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
 }
 
 .row-cover-wrap {
@@ -1244,13 +1243,19 @@ input:checked+label>span {
     transition: color var(--tra);
 }
 
+
 .tell {
-    display: inline-block;
     font-weight: 700;
     font-size: 36px;
     line-height: 1.11;
     color: #4d5ae5;
     text-transform: capitalize;
+}
+
+@media screen and (max-width: 427px) {
+    .tell {
+        font-size: 24px;
+    }
 }
 
 .mail {
@@ -1270,7 +1275,13 @@ input:checked+label>span {
 .mob-soc-list {
     display: flex;
     justify-content: start;
-    gap: 54px;
+    gap: 56px;
+}
+
+@media screen and (max-width: 427px) {
+    .mob-soc-list {
+        gap: 32px;
+    }
 }
 
 .soc-icons {
